# youbot_mannequin

./: CMakeLists.txt  CMakeLists_old.txt  README.md  manifest.xml  package.xml
launch/: mannequin_mode.launch
src/: main_OLD.cpp
