<?xml version="1.0"?>
<package>
  <name>youbot_mannequin</name>
  <version>0.0.0</version>
  <description>The youbot_mannequin package</description>

  <maintainer email="youbot@todo.todo">youbot</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>youbot_driver</build_depend>
  <run_depend>youbot_driver</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
